Fixing problem not showing add new game form and styles with the threeAttributes in the game component

--- a/web/layout/stylus/profile.styl
+++ b/web/layout/stylus/profile.styl
@@ -101,6 +101,9 @@ ul
 					span, div
 						display: none
 
+					.threeAttributes
+						display: none !important
+
 					span
 						&.newText
 							text-transform: uppercase
